--- a/English/Laboratory/Lab2/signin.html
+++ b/English/Laboratory/Lab2/signin.html
@@ -4,9 +4,12 @@
   <meta charset="UTF-8">
   <meta name="autho"content="Max KID-41">
   <title>Nice dark sign in form</title>
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/signin.css">
 </head>
 <body>
+        <head>
+                <h1 id="main"><a id="amain" href="../../EnglishMain.html">MAIN</a></h1>
+        </head>
 <div id="wrapper">
         <h1>Sign In</h1>
 	<form id="signin" method="" action="" autocomplete="off">
