--- a/UkrainFlag/Lab2/register.html
+++ b/UkrainFlag/Lab2/register.html
@@ -14,7 +14,7 @@
       <input type="password" id="password" name="password" placeholder="Password" />
       <input type="email" id="email" name="email" placeholder="Email" />
       <button type="submit">&#xf0da;</button>
-      <p>Already have an account? <a href="index.html">Sign in here</a></p>
+      <p>Already have an account? <a href="signin.html">Sign in here</a></p>
     </form>
   </div>
 </body>
