--- a/English/Laboratory/Lab2/forgot-password.html
+++ b/English/Laboratory/Lab2/forgot-password.html
@@ -6,12 +6,15 @@
   <link rel="stylesheet" href="css/forgot-password.css">
 </head>
 <body>
+  <head>
+    <h1 id="main"><a id="amain" href="../../EnglishMain.html">MAIN</a></h1>
+</head>
   <div id="wrapper">
     <h1>Forgot Password</h1>
     <form id="forgot-password" method="" action="" autocomplete="off">
       <input type="email" id="forgotEmail" name="forgotEmail" placeholder="Email" />
       <button type="submit">&#xf0da;</button>
-      <p>Remember your password? <a href="index.html">Sign in here</a></p>
+      <p>Remember your password? <a href="signin.html">Sign in here</a></p>
     </form>
   </div>
 </body>
